# A-scab

./: README.md  pyproject.toml
ascab/: __init__.py  ceres.py  experiments.py  main.py  results.py  serrater.py  test.py  train.py
ascab/agent/: ppo_lagrangian.py
ascab/env/: env.py
ascab/model/: infection.py  maturation.py
ascab/utils/: generic.py  plot.py  weather.py
ceres/: ceres_2017.txt  ceres_2019.txt  ceres_2021.txt  ceres_2023.txt
doc/images/: A-scab-flow-diagram.drawio
hackathon/: Results_hackathon.ipynb  evaluate_hackathon.ipynb  general_hackathon_notebook.ipynb  submit_hackathon.ipynb
hackathon/dataset/: val.csv
hackathon/models/: BeatHilmy_norm.pkl  EatEvenMoreApples_norm.pkl  SoCalledSprayer_norm.pkl  SprayAndPray1_norm.pkl  SprayAndPray3_norm.pkl  SprayAndPray4_norm.pkl
